# ipocrate

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
src/: lib.rs  main.rs
